--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,16 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:1.3.1'
     compile 'com.jakewharton:butterknife:7.0.1'
-
-//    compile 'com.google.android.gms:play-services:8.4.0'
+    //    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.vk:androidsdk:1.6.3'
     compile 'com.google.android.gms:play-services-plus:8.4.0'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.google.android.gms:play-services-analytics:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
+    compile 'com.google.code.gson:gson:2.6.1'
 }
