--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.vk:androidsdk:1.6.3'
     compile 'com.google.android.gms:play-services-auth:8.3.0'
     compile 'com.google.code.gson:gson:2.6.1'
+    compile 'com.firebase:firebase-client-android:2.5.2'
 }
