--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,20 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 23
@@ -8,7 +23,7 @@ android {
     defaultConfig {
         applicationId "com.geekhub.choosehelper"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -41,4 +56,7 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'io.realm:realm-android:0.85.1'
     compile 'com.google.android.gms:play-services-appindexing:8.3.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
 }
