--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity
             android:name=".screens.activities.SignInActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +26,7 @@
         </activity>
         <activity
             android:name=".screens.activities.SignUpActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".screens.activities.MainActivity"
@@ -37,6 +39,12 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="b77f77b940ea374ce7ca53f6b55e0dcd219e2094" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="b77f77b940ea374ce7ca53f6b55e0dcd219e2094" />
     </application>
 
 </manifest>
