--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,16 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'ANDROID'
+            keyPassword 'ANDROIDKEYPASS'
+            storeFile file('C:/ANDROID_KEY.keystore')
+            storePassword 'ANDROIDSTOREPASS'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "com.geekhub.choosehelper"
         minSdkVersion 16
@@ -42,6 +49,9 @@ android {
 }
 
 dependencies {
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
     compile 'com.android.support:support-v4:23.2.0'
@@ -55,7 +65,5 @@ dependencies {
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'io.realm:realm-android:0.85.1'
     compile 'com.google.android.gms:play-services-appindexing:8.3.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
-        transitive = true;
-    }
+    compile 'com.android.support:cardview-v7:23.2.0'
 }
