--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.21.4'
     }
 }
 apply plugin: 'com.android.application'
@@ -15,16 +15,10 @@ repositories {
 
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    signingConfigs {
-        config {
-            keyAlias 'ANDROID'
-            keyPassword 'ANDROIDKEYPASS'
-            storeFile file('C:/ANDROID_KEY.keystore')
-            storePassword 'ANDROIDSTOREPASS'
-        }
-    }
+
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
     defaultConfig {
@@ -45,6 +39,10 @@ android {
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
