--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,6 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
 apply plugin: 'me.tatarka.retrolambda'
 
@@ -27,6 +26,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -57,11 +57,10 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:1.3.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.vk:androidsdk:1.6.3'
-    compile 'com.google.android.gms:play-services-auth:8.3.0'
-    compile 'com.google.android.gms:play-services-plus:8.3.0'
     compile 'com.google.code.gson:gson:2.6.1'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'io.realm:realm-android:0.85.1'
-    compile 'com.google.android.gms:play-services-appindexing:8.3.0'
     compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.google.android.gms:play-services-auth:8.4.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.10.0'
 }
