--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
     compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:percent:23.2.0'
     compile 'com.android.support:support-v4:23.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'jp.wasabeef:glide-transformations:1.3.1'
@@ -62,4 +63,5 @@ dependencies {
     compile 'io.realm:realm-android:0.85.1'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
+    compile 'com.amazonaws:aws-android-sdk-s3:2.2.13'
 }
