--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".screens.activities.ProfileActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
 
         <service
