--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 apply plugin: 'io.fabric'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'realm-android'
 
 android {
 
@@ -60,7 +61,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.6.1'
     compile 'com.firebase:firebase-client-android:2.5.2'
-    compile 'io.realm:realm-android:0.85.1'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
     compile 'com.amazonaws:aws-android-sdk-s3:2.2.13'
