--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.5.0'
         classpath 'io.fabric.tools:gradle:1.21.4'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath "io.realm:realm-gradle-plugin:0.88.3"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
