--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
     compile 'com.amazonaws:aws-android-sdk-s3:2.2.13'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
