--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,9 @@
         <activity
             android:name=".screens.activities.EditCompareActivity"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".screens.activities.FollowersActivity"
+            android:theme="@style/AppTheme" />
 
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
