--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,10 +65,6 @@
             android:name=".screens.activities.FollowersActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity
-            android:name=".screens.activities.SearchActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
 
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
@@ -92,6 +88,8 @@
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="b77f77b940ea374ce7ca53f6b55e0dcd219e2094" />
+
+        <activity android:name=".screens.activities.SettingsActivity"></activity>
     </application>
 
 </manifest>
