--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
         transitive = true;
     }
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.github.dmytrodanylyk.shadow-layout:library:1.0.1'
     compile 'com.android.support:design:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:percent:23.2.0'
