--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
     compile 'com.amazonaws:aws-android-sdk-s3:2.2.13'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.android.support:preference-v7:23.2.1'
+    compile 'com.android.support:preference-v14:23.2.1'
 }
